--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Production builds
-/build
-/dist
-/.next
-/out
+# Build outputs
+dist/
+build/
+coverage/
 
 # Environment variables
 .env
@@ -16,6 +15,11 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Runtime files
+*.log
+*.pid
+*.seed
 
 # IDE files
 .vscode/
@@ -28,68 +32,12 @@ yarn-error.log*
 .DS_Store
 Thumbs.db
 
-# Logs
-logs
-*.log
+# Vercel
+.vercel
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Webpack bundle analyzer
+bundle-analyzer-report.html
 
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
+# Temporary files
+*.tmp
+*.temp
