--- a/vercel.json
+++ b/vercel.json
@@ -3,10 +3,13 @@
   "outputDirectory": "dist",
   "installCommand": "npm run install:all",
   "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
-    }
+    { "source": "/products/(.*)\\.js", "destination": "/products/$1.js" },
+    { "source": "/cart/(.*)\\.js", "destination": "/cart/$1.js" },
+    { "source": "/auth/(.*)\\.js", "destination": "/auth/$1.js" },
+    { "source": "/products/(.*)", "destination": "/index.html" },
+    { "source": "/cart/(.*)", "destination": "/index.html" },
+    { "source": "/auth/(.*)", "destination": "/index.html" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ],
   "headers": [
     {
