FIx page refresh issue

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
+  "version": 2,
   "buildCommand": "npm run build:all",
   "outputDirectory": "dist",
   "installCommand": "npm run install:all",
   "rewrites": [
+    { "source": "/products", "destination": "/index.html" },
+    { "source": "/cart", "destination": "/index.html" },
+    { "source": "/auth", "destination": "/index.html" },
     { "source": "/products/(.*)\\.js", "destination": "/products/$1.js" },
     { "source": "/cart/(.*)\\.js", "destination": "/cart/$1.js" },
     { "source": "/auth/(.*)\\.js", "destination": "/auth/$1.js" },
