--- a/shared/package.json
+++ b/shared/package.json
@@ -10,7 +10,8 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
     "typescript": "^5.2.0",
